[tool.poetry]
name = "pyredox"
version = "1.0.5"
description = ""
authors = ["Mike Mabey <pypi@mikemabey.com>"]
homepage = "https://github.com/mmabey/pyredox"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "~2.3.0"
typing-extensions = "*"  # Should already be present because of pydantic, no need to specify version

[tool.poetry.group.dev.dependencies]
Brotli = "^1.0.9"
beautifulsoup4 = "^4.11.1"
coveralls = "^3.3.1"
pre-commit = [
    { version = "^3.1", python = ">=3.8,<4.0"},
    { version = "^2", python = "<3.8"}
]
pytest = "^7"
retry2 = "^0.9.3"
tox = "^4.9"
ufmt = "^2.2"
tomlkit = "^0.12.1"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    envlist = py38,py39,py310,py311,py312
    skip_missing_interpreters = True

    [tox:.package]
    basepython = python3

    [testenv]
    passenv = GITHUB_*,COVERALLS_*
    deps =
        pytest
        coveralls
        retry2
        tomlkit
    allowlist_externals = coverage
    commands =
        coverage run --source pyredox -m pytest -vv
"""
